--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,11 +12,11 @@
     "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.8.0",
+    "react-icons": "^4.9.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
-    "styled-components": "^6.0.0-rc.1",
+    "styled-components": "^5.3.11",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
